Final commit for this website

--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
 h1 {
   font-family: monospace; /* set font to monospace */
 }
+
+p {
+  font-family: monospace;
+}
+
+a {
+  font-family: monospace:
+}
